@@ -29,6 +29,7 @@ NEWS
   * [auth] put REMOTE_USER into cgi environment, making it accessible to lua via lighty.req_env (fixes #2495)
   * [auth] new method "extern" to use already present REMOTE_USER (from magnet, ssl, ...) (fixes #2436)
   * [core] remove requirement that default doc-root has to exist, there are reasonable scenarios not requiring static files at all
+  * [core] check whether server.chroot exists
 
 - 1.4.32 - 2012-11-21
   * Code cleanup with clang/sparse (fixes #2437, thx kibi)
